# fastapi-template

./: alembic.ini  app.db  pyproject.toml
alembic/: env.py
alembic/versions/: a3d302c0a7bc_first_empty_migration.py
src/: main.py
src/api/controllers/: health.py
src/api/middlewares/: request_logging.py
src/api/routes/: __init__.py  health.py
src/core/: config.py  database.py
src/models/: base.py
src/schemas/: health.py
src/utils/: logger.py
